# mkreadme

./: .autoreadme.yml  .env  .gitignore  .mkaireadme.yml  LICENSE  README.md  main.py  pyproject.toml
mkaireadme/: main.py
templates/: README.md.j2
