[project]
name = "readmecli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "openai>=2.1.0",
    "pathspec>=0.12.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "shellingham>=1.5.4",
    "typer>=0.19.2",
]
