[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkaireadme"
version = "0.1.3"
authors = [
  { name="Soham Bhagat", email="bhagatsoham14@gmail.com" },
]
description = "An AI-powered CLI to generate professional README.md files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "rich",
    "openai",
    "python-dotenv",
    "pathspec",
    "PyYAML",
    "build>=1.3.0",
    "twine>=6.2.0",
]

[project.scripts]
mkaireadme = "mkaireadme.main:app"

[tool.setuptools]
packages = ["mkaireadme"]